# WalkRobot

./: .env  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml
dl/rl/src/: Actor.py
docker/: install.sh  run.sh  run_gui.sh
docker/image/: .dockerignore  Dockerfile
docs/: README.md
ros_robotics/: .gitignore  Makefile
ros_robotics/src/: .gitignore
ros_robotics/src/control/: CMakeLists.txt  package.xml  setup.cfg  setup.py
ros_robotics/src/control/config/: control.yaml  gazebo_ros2_control.yaml  robot.yaml  sensors__imu_filter.yaml
ros_robotics/src/control/control/: __init__.py  angles_to_effort.py  angles_to_effort_node.py  control_node.py  gpattern_generator.py  inverse_kinematics.py  observation_publisher.py  pid_controller.py  planner_angle_node.py  planner_subsriber.py
ros_robotics/src/control/control/utils/: __init__.py  joint_states.py
ros_robotics/src/control/launch/: control.launch.py  control_launch.yaml  controller_manager.launch.py  effort_control.launch.py  observation_prepare.launch.py
ros_robotics/src/control/observation_prepare/: __init__.py  foot_contact_detector.py  observation_aggregator.py
ros_robotics/src/control/test/: test_gpattern_generator.py  test_inverse_kinematics.py  test_pid_controller.py
ros_robotics/src/control/utils/: __init__.py  joint_states.py
ros_robotics/src/description/: package.xml  setup.py
ros_robotics/src/description/config/: static_transform_publisher.yaml
ros_robotics/src/description/description/: __init__.py  robot_description_publisher.py  tf_wrapper.py
ros_robotics/src/description/description/utils/: __init__.py  property.py
ros_robotics/src/description/launch/: display.launch.py  state.launch.py
ros_robotics/src/description/rviz/: urdf.rviz
ros_robotics/src/description/urdf/: robot.urdf.xacro  robot_gazebo.urdf.xacro  robot_property.urdf.xacro  robot_ros.urdf.xacro  robot_transmission.urdf.xacro
ros_robotics/src/dl_control/: package.xml  setup.cfg  setup.py
ros_robotics/src/dl_control/dl_control/: Actor.py  stand_up_nn.py  stand_up_nn_node.py
ros_robotics/src/dl_control/dl_control/interface/: state.py
ros_robotics/src/dl_control/dl_control/interface/entity/: state.py
ros_robotics/src/dl_control/dl_control/interface/model/: __init__.py  nn.py
ros_robotics/src/dl_control/dl_control/interface/utils/: __init__.py  config.py  state.py
ros_robotics/src/dl_control/dl_control/stand_up/: stand_up_nn.py  stand_up_node.py
ros_robotics/src/dl_control/dl_control/stand_up/SAC/: actor.py  agent.py  critic.py  sac.py
ros_robotics/src/dl_control/dl_control/stand_up/SAC/config/: model.yaml  train.yaml
ros_robotics/src/dl_control/dl_control/stand_up/interface/entity/: action.py
ros_robotics/src/dl_control/dl_control/stand_up/interface/model/: __init__.py  agent.py  critic.py  nn.py
ros_robotics/src/dl_control/dl_control/stand_up/interface/train/: trainer.py
ros_robotics/src/dl_control/dl_control/stand_up/interface/train/config/: train.yaml
ros_robotics/src/dl_control/dl_control/stand_up/interface/utils/: __init__.py  action.py
ros_robotics/src/dl_control/dl_control/stand_up/model/: __init__.py  stand_up_agent.py  stand_up_nn.py
ros_robotics/src/dl_control/dl_control/stand_up/train/: trainer.py
ros_robotics/src/dl_control/launch/: stand_up_nn.launch.py
ros_robotics/src/interface/: CMakeLists.txt  package.xml
ros_robotics/src/interface/msg/: AgrObs.msg  FootContacts.msg
ros_robotics/src/planner/: package.xml  setup.py
ros_robotics/src/planner/launch/: planner.launch.py
ros_robotics/src/planner/planner/: planner_node.py
ros_robotics/src/simulation/: CMakeLists.txt  package.xml  setup.cfg  setup.py
ros_robotics/src/simulation/config/: spawn_entity.yaml
ros_robotics/src/simulation/launch/: display.launch.py  gazebo.launch.py  spawn_robot.launch.py
ros_robotics/src/simulation/model/: building_robot.sdf  robot.urdf
ros_robotics/src/simulation/simulation/: __init__.py  sim.py  spawn_entity.py  spawn_entity_wrapper.py
