[tool.poetry]
name = "walkrobot"
version = "0.1.0"
description = "RL for robot"
authors = ["Ilya Merkulov <merkuloviv@my.msu.ru>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
gym = "^0.26.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
