[tool.poetry]
name = "walkrobot"
version = "0.1.0"
description = "RL for robot"
authors = ["Ilya Merkulov <merkuloviv@my.msu.ru>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11.2"
torch = "^2.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
