[tool.poetry]
name = "WalkRobot"
version = "0.1.0"
description = "RL for robot"
authors = ["merkul"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^8.3.5"
torch = "^2.7.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
